tests/baselines/reference/assignmentCompatability_checking-call-member-off-of-function-interface.errors.txt
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(10,1): error TS2322: Type '""' is not assignable to type 'Callable'.
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(11,1): error TS2741: Property 'call' is missing in type 'string[]' but required in type 'Callable'.
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(12,1): error TS2322: Type '4' is not assignable to type 'Callable'.
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(13,1): error TS2741: Property 'call' is missing in type '{}' but required in type 'Callable'.
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(22,4): error TS2345: Argument of type '""' is not assignable to parameter of type 'Callable'.
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(23,4): error TS2345: Argument of type 'string[]' is not assignable to parameter of type 'Callable'.
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(24,4): error TS2345: Argument of type '4' is not assignable to parameter of type 'Callable'.
tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts(25,4): error TS2345: Argument of type '{}' is not assignable to parameter of type 'Callable'.
  Property 'call' is missing in type '{}' but required in type 'Callable'.


==== tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts (8 errors) ====
    // 3.8.4 Assignment Compatibility 
    
    interface Callable {
        call(blah: any); // also works for 'apply'
    }
    
    var x: Callable;
    
    // Should fail
    x = '';
    ~
!!! error TS2322: Type '""' is not assignable to type '{|Callable|0|}'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    x = [''];
    ~
!!! error TS2741: Property 'call' is missing in type 'string[]' but required in type '{|Callable|0|}'.
!!! related TS2728 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:4:5: 'call' is declared here.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    x = 4;
    ~
!!! error TS2322: Type '4' is not assignable to type '{|Callable|0|}'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    x = {};
    ~
!!! error TS2741: Property 'call' is missing in type '{}' but required in type '{|Callable|0|}'.
!!! related TS2728 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:4:5: 'call' is declared here.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    
    // Should work
    function f() { };
    x = f;
    
    function fn(c: Callable) { }
    
    // Should Fail
    fn('');
       ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type '{|Callable|0|}'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    fn(['']);
       ~~~~
!!! error TS2345: Argument of type 'string[]' is not assignable to parameter of type '{|Callable|0|}'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    fn(4);
       ~
!!! error TS2345: Argument of type '4' is not assignable to parameter of type '{|Callable|0|}'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    fn({});
       ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type '{|Callable|0|}'.
!!! error TS2345:   Property 'call' is missing in type '{}' but required in type '{|Callable|1|}'.
!!! related TS2728 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:4:5: 'call' is declared here.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
!!! annotated symbol 1 tests/cases/compiler/assignmentCompatability_checking-call-member-off-of-function-interface.ts:3:11
    
    
    // Should work
    fn(a => { });
    